samples/_failures_safe/1761435144_2b3c10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_026a1c88.c: In function ‘parser_expect_operator’:
./samples/SAFE/__tmp_026a1c88.c:156:47: error: expected ‘)’ at end of input
  156 |         strcmp(parser->current_token.value, op
      |               ~                               ^
      |                                               )
./samples/SAFE/__tmp_026a1c88.c:156:9: error: expected declaration or statement at end of input
  156 |         strcmp(parser->current_token.value, op
      |         ^~~~~~
